Remove def-xfer stats

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -304,7 +304,7 @@ The single-service accumulation function, $\accone$, transforms an initial state
   }\!\!\!\!
 \end{align}
 
-This draws upon $\wd¬gaslimit$, the gas limit implied by the deferred-transfers, work-reports and gas-privileges.
+This draws upon $\wd¬gaslimit$, the gas limit implied by the selected deferred-transfers, work-reports and gas-privileges.
 
 \subsection{Final State Integration}
 
