--- a/text/previous_work.tex
+++ b/text/previous_work.tex
@@ -18,7 +18,7 @@ Enabling as many innovators to participate and interact, both with each other an
 
 The Ethereum protocol was formally defined in this paper's spiritual predecessor, the \emph{Yellow Paper}, by \cite{wood2014ethereum}. This was derived in large part from the initial concept paper by \cite{buterin2013ethereum}. In the decade since the \emph{YP} was published, the \emph{de facto} Ethereum protocol and public network instance have gone through a number of evolutions, primarily structured around introducing flexibility via the transaction format and the instruction set and ``precompiles'' (niche, sophisticated bonus instructions) of its scripting core, the Ethereum virtual machine (\textsc{evm}).
 
-Almost one million crypto-economic actors take part in the validation for Ethereum.\footnote{Practical matters do limit the level of real decentralization. Validator software expressly provides functionality to allow a single instance to be configured with multiple key sets, systematically facilitating a much lower level of actual decentralization than the apparent number of actors, both in terms of individual operators and hardware. Using data collated by \cite{hildobby2024eth2} on Ethereum 2, one can see one major node operator, Lido, has steadily accounted for almost one-third of the almost one million crypto-economic participants.} Block extension is done through a randomized leader-rotation method where the physical address of the leader is public in advance of their block production.\footnote{Ethereum's developers hope to change this to something more secure, but no timeline is fixed.} Ethereum uses Casper-FFG introduced by \cite{buterin2019casper} to determine finality, which with the large validator base finalizes the chain extension around every 13 minutes.
+Almost one million crypto-economic actors take part in the validation for Ethereum.\footnote{Practical matters do limit the level of real decentralization. Validator software expressly provides functionality to allow a single instance to be configured with multiple key sets, systematically facilitating a much lower level of actual decentralization than the apparent number of actors, both in terms of individual operators and hardware. Using data collated by \cite{hildobby2024eth2} on Ethereum 2, one can see one major node operator, Lido, has steadily accounted for almost one-third of the almost one million crypto-economic participants.} Block extension is done through a randomized leader-rotation method where the physical address of the leader is public in advance of their block production.\footnote{Ethereum's developers hope to change this to something more secure, but no timeline is fixed.} Ethereum uses Casper-\textsc{ffg} introduced by \cite{buterin2019casper} to determine finality, which with the large validator base finalizes the chain extension around every 13 minutes.
 
 Ethereum's direct computational performance remains broadly similar to that with which it launched in 2015, with a notable exception that an additional service now allows 1\textsc{mb} of \emph{commitment data} to be hosted per block (all nodes to store it for a limited period). The data cannot be directly utilized by the main state-transition function, but special functions provide proof that the data (or some subsection thereof) is available. According to \cite{ethereum2024danksharding}, the present design direction is to improve on this over the coming years by splitting responsibility for its storage amongst the validator base in a protocol known as \emph{Dank-sharding}.
 
