standard use of 'r' for work report variables

--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -69,9 +69,9 @@ The state serialization is then defined as the dictionary built from the amalgam
     &&C(14) &\mapsto \encode{
       \sq{\build{
         \var{\sq{\build{
-          \tup{\mathbf{w}, \var{\mathbf{d}}}
+          \tup{\mathbf{r}, \var{\mathbf{d}}}
         }{
-          \tup{\mathbf{w}, \mathbf{d}} \orderedin \mathbf{i}
+          \tup{\mathbf{r}, \mathbf{d}} \orderedin \mathbf{i}
         }}}
       }{
         \mathbf{i} \orderedin \ready
