Fix finite field construction

--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -70,7 +70,7 @@ x^{16} + x^5 + x^3 + x^2 + 1
 
 Hence:
 \begin{equation}
-\finitefield_{2^{16}} \equiv \frac{\finitefield_2\subb{x}}{x^{16}} + x^5 + x^3 + x^2 + 1
+\finitefield_{2^{16}} \equiv \frac{\finitefield_2\subb{x}}{x^{16} + x^5 + x^3 + x^2 + 1}
 \end{equation}
 
 We name the generator of $\frac{\finitefield_{2^{16}}}{\finitefield_2}$, the root of the above polynomial, $\authpool$ as such: $\finitefield_{2^{16}} = \finitefield_2(\authpool)$.
