Improve PVM invocation

--- a/preamble.tex
+++ b/preamble.tex
@@ -793,7 +793,7 @@
 \newcommand*{\execst}{\varepsilon}
 
 
-\newcommand*{\contextmutator}[1][]{\Omega\ang{#1}}
+\newcommand*{\contextmutator}[1]{\Omega\ang{#1}}
 
 %%%%%%%%%%%%
 % Other stuff
