--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -141,7 +141,7 @@ We define $\Psi_A$, the Accumulation invocation function as:
   \label{eq:accinvocation}
   \Psi_A& \colon\abracegroup{
     \tuple{
-      \partialstate, \timeslot, \serviceid, \gas, \sequence{\operandtuple}
+      \partialstate, \timeslot, \serviceid, \gas, \sequence{\accinput}
     }
     &\to \acconeout
     \\
